z-index bug... fjernet

--- a/style.css
+++ b/style.css
@@ -222,7 +222,6 @@ figure {
 	margin-right: 0.5%;
 	text-align: center;
 	font-style: italic;
-	z-index:3;
 }
 
 .bildetekst img:hover {
